[gd_scene load_steps=4 format=3 uid="uid://bj0d1se17qkg8"]

[ext_resource type="Theme" uid="uid://burtlrkgl63lg" path="res://ui/main_theme.tres" id="1_wf0n7"]
[ext_resource type="Script" uid="uid://cqwwmy1nmu3k5" path="res://scripts/gameplay_ui.gd" id="2_bcwfe"]
[ext_resource type="Texture2D" uid="uid://dwhd67uutg258" path="res://textures/heart_icon.png" id="3_bcwfe"]

[node name="GameplayUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wf0n7")
script = ExtResource("2_bcwfe")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -278.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 54.0
grow_horizontal = 2
text = "Bullet Hell!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerResources" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="LivesContainer" type="HBoxContainer" parent="ColorRect/PlayerResources"]
layout_mode = 2

[node name="Control" type="Control" parent="ColorRect/PlayerResources/LivesContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="HPLabel" type="Label" parent="ColorRect/PlayerResources/LivesContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Lives:"
vertical_alignment = 2

[node name="HPIcons" type="HBoxContainer" parent="ColorRect/PlayerResources/LivesContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ColorRect/PlayerResources/LivesContainer/HPIcons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
texture = ExtResource("3_bcwfe")
stretch_mode = 2

[node name="BombsContainer" type="HBoxContainer" parent="ColorRect/PlayerResources"]
layout_mode = 2

[node name="Control" type="Control" parent="ColorRect/PlayerResources/BombsContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="BombLabel" type="Label" parent="ColorRect/PlayerResources/BombsContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Bombs:"

[node name="BombIcons" type="HBoxContainer" parent="ColorRect/PlayerResources/BombsContainer"]
layout_mode = 2
